--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@xterm/addon-attach": "^0.10.0-beta.1",
     "@xterm/addon-fit": "^0.9.0-beta.1",
-    "@xterm/addon-webgl": "^0.17.0-beta.1",
     "@xterm/xterm": "^5.4.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,7 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "SSL_CRT_FILE=../ssl/certs/certificate.pem SSL_KEY_FILE=../ssl/private/key.pem HTTPS=true react-scripts start",
+    "start": "HOST=localhost SSL_CRT_FILE=../ssl/certs/certificate.pem SSL_KEY_FILE=../ssl/private/key.pem HTTPS=true react-scripts start",
     "build": "SSL_CRT_FILE=../ssl/certs/certificate.pem SSL_KEY_FILE=../ssl/private/key.pem HTTPS=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
